src/components/countryProfile/country-profile.scss
@import "../../assets/stylesheets/rtl-support";
@import "../../assets/stylesheets/components/variables";

$width-of-scoreCard-en: 150px;
$width-of-scoreCard-es: 200px;

.country-detail {
  .comparison-graph-panel {
    height: 840px;
    width: 100%;
    background-color: $white;
    margin-top: -15px;
  }
  .header-section {
    position: relative;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    height: 140px;

    .country-name {
      height: auto;
      display: flex;
      flex-direction: row;
      .country-name-and-date {
        display: flex;
        flex-direction: column;
        justify-content: flex-end;
        @include margin-left(30px);
        #collected-date {
          font-size: 12px;
        }
      }
    }

    .header-section-button-container {
      display: flex;
      .header-section-button {
        display: flex;
        flex-direction: column;
        font-size: 12px;
        width: 5vw;
        justify-items: center;
        align-content: center;
        cursor: pointer;
      }
    }
  }

  .copy-blue {
    margin-top: 20px;
  }

  .overall-card {
    display: flex;
    vertical-align: middle;

    .country-progress-over-time {
      display: flex;
      flex-direction: row;
      justify-content: space-between;
      width: 320px;
      text-align: center;
      align-items: center;
      @include margin-left(55vw);
      p {
        font-size: 20px;
        font-weight: 700;
      }
      .progress-accordion::after {
        content: "\f078";
        font-family: "FontAwesome", serif;
      }
      .progress-accordion-expanded::after {
        content: "\f077";
        font-family: "FontAwesome", serif;
      }
    }
  }

  .sub-header {
    font-weight: 700;
    font-size: 12px;
    color: $gdhi-black;
  }

  .category-name-and-phase-value {
    display: flex;
    flex-direction: row;
    .indicator-panel-container-category-name-and-icon {
      display: flex;
      align-items: center;
      width: 20vw;
      img {
        @include margin-right(30px);
      }
      p {
        font-weight: 700;
        font-size: 16px;
        text-transform: none;
      }
    }
    .category-phase {
      font-weight: 400;
      font-size: 20px;
      height: 40px;
      width: 40px;
      justify-content: center;
      align-items: center;
      display: flex;
      @include margin-left(28vw);
    }
    .phaseNA {
      background-color: transparent;
    }
    .phase1 {
      background-color: $score1;
    }
    .phase2 {
      background-color: $score2;
    }
    .phase3 {
      background-color: $score3;
    }
    .phase4 {
      background-color: $score4;
    }
    .phase5 {
      background-color: $score5;
    }
  }

  .category-bar {
    background-color: $gdhi-light-gray;
  }
  .phase-desc {
    font-weight: 400;
    font-size: 12px;
    color: $gdhi-black;
    width: 20vw;
  }

  .overall-score,
  .indicator-score {
    text-align: center;
    font-weight: 400;
    font-size: 20px;
    width: 40px;
    height: 35px;
    padding-top: 5px;
    display: inline-block;
    vertical-align: middle;
  }

  .heading-row {
    display: flex;

    div {
      padding: 10px 0;
      border-bottom: 2px solid $border-color;
      margin-bottom: 10px;

      &:first-child {
        @include margin-left(0);
      }
    }
  }

  .header-bold {
    text-transform: capitalize;
  }

  .country-summary-text {
    list-style: none;
    white-space: pre-wrap;
    color: $gdhi-black;
    font-weight: 400;
    font-size: 12px;
  }
  .country-summary-contact-name {
    color: $gdhi-black;
    font-weight: 400;
    font-size: 12px;
  }

  .country-text {
    list-style: none;
    font-weight: 400;
    font-size: 12px;
  }

  .accordion::after {
    @include margin-left(10vw);
  }
  .category-accordion-content {
    margin-top: 20px;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    flex-wrap: wrap;
    .indicator {
      margin-bottom: 10px;
      &:last-child {
        border: none;
      }
      width: 49%;
      display: flex;
      align-items: center;
      flex-direction: column;

      .indicator-details-container {
        display: flex;
        flex-direction: row;
        padding: 10px 20px;
        background-color: $white;
        .indicator-id,
        .indicator-name-value {
          font-weight: 700;
          font-size: 12px;
          color: $gdhi-purple-shade-1;
        }
        .indicator-description {
          font-weight: 700;
          font-size: 12px;
          color: $gdhi-black;
          margin: 10px 0;
        }
        .indicator-score-description {
          font-weight: 400;
          font-size: 12px;
          color: $gdhi-black;
        }
      }

      .score-container {
        flex-grow: 0;
        flex-shrink: 0;
        text-align: center;
        width: 100%;
        height: 60px;
        display: flex;
        background-color: $fine-gray;
        justify-content: space-between;
        .score {
          display: flex;
          width: 50%;

          justify-content: center;
          align-items: center;
          p {
            font-weight: 700;
            font-size: 16px;
            @include margin-right(20px);
          }
        }
        .separator {
          background-color: $gdhi-black;
          height: 80%;
          width: 1px;
          align-self: center;
        }
      }
    }
  }
}

.column-60percent {
  width: 60%;
  @include margin-right(20px);

  .legend {
    display: flex;
    flex-direction: row;
    margin-bottom: 20px;
    .government-data {
      display: flex;
      flex-direction: row;
      justify-content: flex-start;
      align-items: center;

      .bar {
        width: 40px;
        height: 5px;
        background-color: $gdhi-purple-shade-1;
        @include margin-right(20px);
      }
    }
    .non-government-data {
      display: flex;
      flex-direction: row;
      justify-content: flex-start;
      align-items: center;
      @include margin-left(20px);

      .bar {
        width: 40px;
        height: 5px;
        background-color: $gdhi-purple-shade-2;
        @include margin-right(20px);
      }
    }
    .verified-non-government-data {
      display: flex;
      flex-direction: row;
      justify-content: flex-start;
      align-items: center;
      @include margin-left(40px);

      img {
        @include margin-right(20px);
      }
    }
  }
  &:last-child {
    @include margin-right(0);
    flex-shrink: 0;
  }

  @media all and (max-width: 1024px) {
    width: 100%;
    @include margin-right(0);
    margin-top: 5px;
  }
}

.column-40percent {
  color: $gdhi-purple-shade-1;
  width: 40vw;

  &:last-child {
    @include margin-right(0);
    flex-shrink: 0;
  }

  @media all and (max-width: 1024px) {
    width: 100%;
    @include margin-right(0);
    margin-top: 5px;
  }
}

//development indicators
.development-indicators {
  .row {
    flex-wrap: wrap;
  }

  .indicator {
    width: 50vw;
    border: none;
    margin-top: 10px;
    padding: 0 5px;
    box-sizing: border-box;
    color: $gdhi-black;
    .indicator-category {
      font-weight: 400;
      font-size: 12px;
    }
  }
}

// benchmark
.benchmark {
  text-transform: uppercase;
  margin-top: 10px;
}

.benchmarkCompare {
  margin-top: 5px;

  &:before {
    display: inline-block;
    @include margin-right(5px);
    border: 8px solid transparent;
  }

  &.at {
    color: $font-grey;
  }

  &.above {
    color: $positive;
    margin-top: 0;

    &:before {
      content: " ";
      vertical-align: baseline;
      border-bottom: 8px solid $positive;
    }
  }

  &.below {
    color: $negative;

    &:before {
      vertical-align: top;
      content: " ";
      border-top: 8px solid $negative;
    }
  }
}

//To print the appropriate content
@media print {
  .country-detail {
    #collected-date {
      display: block;
      position: unset;
    }

    .button-container {
      display: none;
      margin-top: 0;
    }

    .country-name {
      margin-bottom: 0;
      display: block;
    }
  }
  .box-shadow {
    -webkit-box-shadow: unset;
    box-shadow: unset;
    border: 1px solid $border-color;
  }
  .development-indicators {
    .indicator {
      width: unset;
    }
  }

  .accordion.expanded:after {
    content: "";
  }
}

